@@ -1,3 +1,8 @@
+2008-10-23  Juanma Barranquero  <lekktu@gmail.com>
+
+	* edmacro.el (edmacro-eight-bits, edmacro-mode): Fix docstring typos.
+	(edmacro-mismatch, edmacro-sanitize-for-string): Doc fixes.
+
 2008-10-23  Chong Yidong  <cyd@stupidchicken.com>
 
 	* filesets.el: Update author email.
@@ -5,8 +10,7 @@
 
 2008-10-23  Jens Petersen  <petersen@redhat.com>
 
-	* pcmpl-rpm.el (pcomplete/rpm): Make "rpm -qp" use file
-	completion.
+	* pcmpl-rpm.el (pcomplete/rpm): Make "rpm -qp" use file completion.
 
 2008-10-23  Ulrich Mueller  <ulm@kph.uni-mainz.de>
 
